[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Utils/Gameplay/MoneyManager.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/UI/MoneyPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/UI/Fonts/Tiny_font.tres" type="DynamicFont" id=3]

[node name="MoneyManager" type="Node"]
script = ExtResource( 1 )
money_effect = ExtResource( 2 )

[node name="MoneyUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="MoneyUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Text" type="RichTextLabel" parent="MoneyUI/Control"]
anchor_left = 0.695
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 61, 56 )
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave][rainbow]$ 11314214313411"
text = "$ 11314214313411"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MoneyPopupContainer" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="."]
